* Minor improvements for "sjt.lm" and "sjt.glm".

New functions:
* "sjt.lmer" to print summary tables of linear mixed models.
* "sjt.glmer" to print summary tables of generalized linear mixed models.

Changes to functions:
* Added 'type = "probc"' to "sjp.glm" as alternative to 'type = "prob"'. 'type = "probc"' calculated predicted probabilities based on the "predict" function.

Bug fixes:
* Fixed formatting bug for pseudo-R2 in "sjt.glm".
* Fixed bug in "sjp.likert" when data frame had only one column.

Version 1.8
------------------------------------------------------------------------------
General:
* Utility, recode and statistical test functions have been moved to another package called "sjmisc"! sjPlot now imports sjmisc.
* R-Version dependency changed to R >= 3.1, due to import of "tidyr" and "dplyr" packages.
* "sjp.emm.int" is now deprecated. Use "sjp.int" with parameter "type = 'emm'" to plot estimated marginal means. Estimated marginal means can now also be applied to lmerMod-objects from lme4-package.

New functions:
* "sjt.mwu" to print Mann-Whitney-tests as HTML-table.

Changes to function 'sjp.int':
* "sjp.int" now supports "plm" objects (from plm-package).
* Added parameter "type" to "sjp.int" to plot different types of interactions, including estimated marginal means.
* Added parameter "legendTitle" to "sjp.int".
* Added parameter "int.plot.index" to "sjp.int", so only selected interaction terms may be plotted.
* Added parameter "showCI" to "sjp.int" (only for type = "emm" and "eff") to add confidence intervals to estimated marginal means.
* Added parameter "facet.grid" to "sjp.int" to plot each effect in a separate plot.
* Parameter "legendLabels" of "sjp.int" now accepts a list of character vectors, with one vector of legend labels for each interaction plot plotted.
* Parameter "title" of "sjp.int" now accepts a character vector of same length as interaction terms, with one title character string for each interaction plot plotted.